<resources>
    <string name="app_name">EdvoraAssessment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Nearest</string>
    <string name="tab_text_2">Past</string>
    <string name="tab_text_3">Upcoming</string>
    <string name="filters">Filters</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="edvora">Edvora</string>
    <string name="rides">Rides</string>

    <string-array name="cities">
        <item></item>
        <item>Silvassa</item>
        <item>Udaipur</item>
        <item>Sasaram</item>
        <item>Ramagundam</item>
        <item>Laharpur</item>
    </string-array>
    <string-array name="states">
        <item> </item>
        <item>Kerala</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Bihar</item>
        <item>Telangana</item>
        <item>Uttar Pradesh</item>
    </string-array>

</resources>